dataset1235/2025-2/1379599236/users/2549797095/executions/831076482_3788368433.log
== SUBMISSION (2025-08-13 16:39:35)
-- CODE: 
input("Qual é o seu nome?")
print("Samuel Martins")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Qual é o seu nome?Samuel Martins
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Qual é o seu nome?Samuel Martins
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Qual é o seu nome?Samuel Martins
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Qual é o seu nome?Samuel Martins
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Qual é o seu nome?Samuel Martins
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 16:38:57)
-- CODE: 
input("Qual é o seu nome?")
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Qual é o seu nome?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Qual é o seu nome?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Qual é o seu nome?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Qual é o seu nome?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Qual é o seu nome?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 16:33:32)
-- CODE: 
input("Vasco")
print(variavel)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(variavel)
          ^^^^^^^^
NameError: name 'variavel' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(variavel)
          ^^^^^^^^
NameError: name 'variavel' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(variavel)
          ^^^^^^^^
NameError: name 'variavel' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(variavel)
          ^^^^^^^^
NameError: name 'variavel' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(variavel)
          ^^^^^^^^
NameError: name 'variavel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 16:39:28)
-- CODE: 
input("Qual é o seu nome?")
print("Samuel Martins")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Qual é o seu nome?Samuel Martins
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Qual é o seu nome?Samuel Martins
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Qual é o seu nome?Samuel Martins
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Qual é o seu nome?Samuel Martins
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Qual é o seu nome?Samuel Martins
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 16:42:58)
-- CODE: 
nome = input("Qual é o seu nome?")
print("Seu nome é:", nome)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Qual é o seu nome?Seu nome é: Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Qual é o seu nome?Seu nome é: Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Qual é o seu nome?Seu nome é: Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Qual é o seu nome?Seu nome é: Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Qual é o seu nome?Seu nome é: Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 16:33:33)
-- CODE: 
input("Vasco")
print(variavel)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(variavel)
          ^^^^^^^^
NameError: name 'variavel' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(variavel)
          ^^^^^^^^
NameError: name 'variavel' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(variavel)
          ^^^^^^^^
NameError: name 'variavel' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(variavel)
          ^^^^^^^^
NameError: name 'variavel' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(variavel)
          ^^^^^^^^
NameError: name 'variavel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 16:39:52)
-- CODE: 
input("Qual é o seu nome?")
print(input)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Qual é o seu nome?<built-in function input>
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Qual é o seu nome?<built-in function input>
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Qual é o seu nome?<built-in function input>
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Qual é o seu nome?<built-in function input>
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Qual é o seu nome?<built-in function input>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 16:33:12)
-- CODE: 
input("Vasco")
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Vasco
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Vasco
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Vasco
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Vasco
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Vasco
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 16:34:31)
-- CODE: 
input(Vasco)
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Vasco)
          ^^^^^
NameError: name 'Vasco' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Vasco)
          ^^^^^
NameError: name 'Vasco' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Vasco)
          ^^^^^
NameError: name 'Vasco' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Vasco)
          ^^^^^
NameError: name 'Vasco' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Vasco)
          ^^^^^
NameError: name 'Vasco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 16:33:32)
-- CODE: 
input("Vasco")
print(variavel)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(variavel)
          ^^^^^^^^
NameError: name 'variavel' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(variavel)
          ^^^^^^^^
NameError: name 'variavel' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(variavel)
          ^^^^^^^^
NameError: name 'variavel' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(variavel)
          ^^^^^^^^
NameError: name 'variavel' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(variavel)
          ^^^^^^^^
NameError: name 'variavel' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 16:33:44)
-- CODE: 
input("Vasco")

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Vasco
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Vasco
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Vasco
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Vasco
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Vasco
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 16:34:12)
-- CODE: 
input("Vasco")
print("Vasco")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
VascoVasco
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
VascoVasco
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
VascoVasco
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
VascoVasco
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
VascoVasco
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 16:42:20)
-- CODE: 
nome = input("Qual é o seu nome?")
print("Seu nome é:", nome)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Qual é o seu nome?Seu nome é: Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Qual é o seu nome?Seu nome é: Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Qual é o seu nome?Seu nome é: Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Qual é o seu nome?Seu nome é: Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Qual é o seu nome?Seu nome é: Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 16:34:09)
-- CODE: 
input("Vasco")
print("Vasco")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
VascoVasco
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
VascoVasco
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
VascoVasco
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
VascoVasco
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
VascoVasco
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-13 16:34:33)
-- CODE: 
input(Vasco)
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Vasco)
          ^^^^^
NameError: name 'Vasco' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Vasco)
          ^^^^^
NameError: name 'Vasco' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Vasco)
          ^^^^^
NameError: name 'Vasco' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Vasco)
          ^^^^^
NameError: name 'Vasco' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(Vasco)
          ^^^^^
NameError: name 'Vasco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-13 16:33:17)
-- CODE: 
input("Vasco")
print()
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Vasco
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Vasco
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Vasco
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Vasco
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Vasco
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
